This file lists bigger/noteworthy changes, only...


Version 1.3 (upcoming)

dynload:
  o Haiku/x86 build fix
  o dynload fix for PE files that do not contain a symbol export directory (thanks Ashok!)
dyncall:
  o build fix when using clang's integrated assembler on arm32 hard-float platforms
dyncallback:
  o build fix when using clang's integrated assembler on arm32 hard-float platforms
buildsys:
  o windows/nmake based builds: output library name changes to follow conventions of the native
    platform and be in line with cmake based builds


Version 1.2 (2021/01/23)

dyncall:
  o windows arm64 support (thanks Bernhard!)
  o extended signature with more chars for calling convention switching (only for modes
    that coexist on a platform with other conventions)
  o made "formatted" call interface use calling convention signature chars
  o added helper function dcGetModeFromCCSigChar() mapping callconv sig chars to respective mode
  o removed some unnecessary headers (only contained internal used forward declarations)
  o build fix when using clang's integrated assembler on non-Darwin PPC32 platforms
dyncallback:
  o windows arm64 support (thanks Bernhard!)
  o build fix when using clang's integrated assembler on non-Darwin PPC32 platforms
dynload:
  o fix to build with musl libc
  o support for loading macos >= 11.0.1 (Big Sur) dylibs provided by system's "built-in dynamic
    linker cache of all system-provided libraries" (those dylibs are no longer present on the fs)
  o fix to work on recent Haiku versions (r1 beta versions)
doc:
  o manual now specifying calling convention signature chars
  o dynload(3) note about macos >= 11.0.1 cached dylib support (see above)
  o marked Haiku/x64 as supported and tested
bindings:
  o pydc: Python 3 support, Python 2 unicode support, added get_path function, changing
    'Z' conversions to only immutable types and 'p' to mutable types (and handles), support